Bug 1448089 - Make MBasicBlock::addPredecessorSameInputsAs fallible. r=tcampbell a=lizzard

--HG--
extra : source : 131166cff47d79cdc09dd89a5a7d5d4ec9af6a75